<resources>
    <string name="app_name">My Dictionary</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="action_settings">Settings</string>
    <string name="action_infak">Infak</string>
    <string name="input">Masukan kata</string>
    <string name="app_id">"ca-app-pub-3624492980147085~9560035411"</string>
    <string name="ad_unit_baner">ca-app-pub-3624492980147085/9775657837</string>
    <string name="ad_unit_inter">ca-app-pub-3624492980147085/8042051565</string>

    <string name="tak_ada_hasil">Tak ada \"%s\" dalam database</string>
    <string name="tulisanDiKotakCari">Pencarian</string>
    <string name="artinya">Artinya</string>
    <string name="exit">Exit</string>
    <string name="in_en">Indonesia - English</string>
    <string name="loading">Tunggu... sedang mempersiapkan data\nHanya sekali</string>
    <string name="title_about">%s \nVersi : %s</string>
    <string name="body_about"><b>My Dictionary</b> merupakan Aplikasi Kamus tiga bahasa Indonesia-Arab-Inggris  Kode Sumber terbuka tersedia di <a href='https://github.com/al-qorut/mydictionary.git'>github.com</a> untuk keperluan belajar dan latihan bahasa serta belajar pemrograman bukan untuk tujuan komersial.</string>
    <string name="close">close</string>
    <string name="apply">Apply</string>
    <string name="congratulations">Selamat</string>
    <string name="success_body">Sukses</string>
    <string name="done">Ok</string>
    <string name="copytoclip">%s \ntelah dicopy ke clipboard</string>
    <string name="rate">Rate</string>
    <string name="title_rate">Menilai Aplikasi</string>
    <string name="no_play_store">Playstore tidak ada</string>
    <string name="no">Tidak</string>
    <string name="pilih">Pilih..</string>
    <string name="extract_data">Tunggu hanya sekali saja...  \nsedang mempersiapkan data</string>
    <string name="search">Cari..</string>
    <string name="info">Info</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="info_cari_kata">Kamus terdiri dari Arab-Arab</string>
    <string-array name="fontsize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="action_bonus">Bonus Iklan</string>
    <string name="language">Bahasa</string>
    <string name="nama_font">Fonts</string>
    <string name="font_value">Amiri.ttf</string>
    <string name="size_font">Ukuran Huruf</string>
    <string name="font_size_value">Medium</string>
    <string name="label_infak">INFAK</string>
    <string name="display_name">Display Nama</string>
    <string name="have_infak_iklan">Infak Iklan</string>
    <string name="count_iklan">Jumlah Iklan</string>
    <string name="is_show_arti">Tampilkan Arti</string>
    <string name="is_show_latin">Tampilkan Latin</string>
    <string name="view_doa">Tampilan</string>
    <string name="default_sistem">Default System</string>
    <string name="font_amiri">Amiri</string>
    <string name="font_qalam">Qalam</string>
    <string name="size_mini">Kecil</string>
    <string name="size_medium">Sedang</string>
    <string name="size_large">Besar</string>
    <string name="thema_mint">Thema Gelap</string>
    <string name="tak_ada_favorite">Belum ada list kata yang favorite</string>
    <string name="source">Sumber : %1s</string>
    <string name="arti_include">Cari kata di arti</string>

</resources>