<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="smk.adzikro.doadzikir.MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:icon="@drawable/ic_assignment_ind_black_24dp"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_black_24dp"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        android:icon="@drawable/ic_stars_black_24dp"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"/>

</menu>
