<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bill_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="?attr/primaryTextColor"
        app:tint="?attr/iconColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/action_settings"
        app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
        android:elevation="@dimen/activity_margin"
        android:visibility="gone"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/bill_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/ad_view_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/billing_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/primaryTextColor"
                android:padding="24dp"
                android:text="@string/language"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <include
                android:id="@+id/settings_tema_divider"
                layout="@layout/divider" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tv_tema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/primaryTextColor"
                android:padding="24dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:text="@string/thema_mint"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tv_cari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="?attr/primaryTextColor"
                android:padding="24dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:text="@string/arti_include"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <include
                android:id="@+id/settings_view_divider"
                layout="@layout/divider" />
            <TextView
                android:id="@+id/settings_view_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:textColor="?attr/primaryTextColor"
                android:layout_height="wrap_content"
                android:text="@string/view_doa" />

            <RelativeLayout
                android:id="@+id/setting_font_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/view_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/info_font"
                    style="@style/SettingsTextLabelStyle"
                    android:textColor="?attr/primaryTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_font" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:checked="true"
                        android:text="@string/default_sistem"
                        android:id="@+id/font_default"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:text="@string/font_amiri"
                        android:id="@+id/font_amiri"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:text="@string/font_qalam"
                        android:id="@+id/font_qalam"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/size_font_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/size_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/info_font_size"
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:text="@string/size_font" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:checked="true"
                        android:text="@string/size_mini"
                        android:id="@+id/size_mini"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:text="@string/size_medium"
                        android:id="@+id/size_medium"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/primaryTextColor"
                        android:text="@string/size_large"
                        android:id="@+id/size_large"/>
                </RadioGroup>
            </RelativeLayout>








        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>